--- a/provider-python-kafka/pyproject.toml
+++ b/provider-python-kafka/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Yousaf Nabi <you@saf.dev>"]
 readme = 'README.md'
 repository = "https://github.com/pactflow/example-provider-python-kafka"
 homepage = "https://github.com/pactflow/example-provider-python-kafka"
+package-mode = false
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
