ci: conditionally run jobs based on changes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,36 +19,42 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3
         id: changes_rust
+        name: check changes rust
         with:
           filters: |
             src:
               - '*-rust-*'
       - uses: dorny/paths-filter@v3
         id: changes_dotnet
+        name: check changes dotnet
         with:
           filters: |
             src:
               - '*-dotnet-*'
       - uses: dorny/paths-filter@v3
         id: changes_go
+        name: check changes go
         with:
           filters: |
             src:
               - '*-go-*'
       - uses: dorny/paths-filter@v3
         id: changes_java
+        name: check changes java
         with:
           filters: |
             src:
               - '*-java-*'
       - uses: dorny/paths-filter@v3
         id: changes_js
+        name: check changes javascript
         with:
           filters: |
             src:
               - '*-js-*'
       - uses: dorny/paths-filter@v3
         id: changes_python
+        name: check changes python
         with:
           filters: |
             src:
