--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,10 +2,75 @@ name: test
 
 on:
   push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 jobs:
+
+# Job to determine which projects have changed
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      rust: ${{ steps.changes_rust.outputs.src }}
+      dotnet: ${{ steps.changes_dotnet.outputs.src }}
+      go: ${{ steps.changes_go.outputs.src }}
+      java: ${{ steps.changes_java.outputs.src }}
+      js: ${{ steps.changes_js.outputs.src }}
+      python: ${{ steps.changes_python.outputs.src }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dorny/paths-filter@v3
+        id: changes_rust
+        name: check changes rust
+        with:
+          filters: |
+            src:
+              - '*-rust-*'
+      - uses: dorny/paths-filter@v3
+        id: changes_dotnet
+        name: check changes dotnet
+        with:
+          filters: |
+            src:
+              - '*-dotnet-*'
+      - uses: dorny/paths-filter@v3
+        id: changes_go
+        name: check changes go
+        with:
+          filters: |
+            src:
+              - '*-go-*'
+      - uses: dorny/paths-filter@v3
+        id: changes_java
+        name: check changes java
+        with:
+          filters: |
+            src:
+              - '*-java-*'
+      - uses: dorny/paths-filter@v3
+        id: changes_js
+        name: check changes javascript
+        with:
+          filters: |
+            src:
+              - '*-js-*'
+      - uses: dorny/paths-filter@v3
+        id: changes_python
+        name: check changes python
+        with:
+          filters: |
+            src:
+              - '*-python-*'
+
   test:
     name: ${{matrix.project}}-${{matrix.os}}
+    needs: changes
     strategy:
       matrix:
         os: 
@@ -13,13 +78,19 @@ jobs:
           - windows-latest
           - macos-13
           - macos-14
-        project:
-          - rust
-          - dotnet
-          - go
-          - java
-          - js
-          - python
+        include:
+          - project: rust
+            run: ${{ needs.changes.outputs.rust == 'true' }}
+          - project: dotnet
+            run: ${{ needs.changes.outputs.dotnet == 'true' }}
+          - project: go
+            run: ${{ needs.changes.outputs.go == 'true' }}
+          - project: java
+            run: ${{ needs.changes.outputs.java == 'true' }}
+          - project: js
+            run: ${{ needs.changes.outputs.js == 'true' }}
+          - project: python
+            run: ${{ needs.changes.outputs.python == 'true' }}
       fail-fast: false
     runs-on: ${{ matrix.os }}
     defaults:
