ci: check diff against main

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,44 +29,50 @@ jobs:
         id: changes_rust
         name: check changes rust
         with:
+          base: main
           filters: |
             src:
-              - '**-rust-**'
+              - '**-rust-**/'
       - uses: dorny/paths-filter@v3
         id: changes_dotnet
         name: check changes dotnet
         with:
+          base: main
           filters: |
             src:
-              - '**-dotnet-**'
+              - '**-dotnet-**/'
       - uses: dorny/paths-filter@v3
         id: changes_go
         name: check changes go
         with:
+          base: main
           filters: |
             src:
-              - '**-go-**'
+              - '**-go-**/'
       - uses: dorny/paths-filter@v3
         id: changes_java
         name: check changes java
         with:
+          base: main
           filters: |
             src:
-              - '**-java-**'
+              - '**-java-**/'
       - uses: dorny/paths-filter@v3
         id: changes_js
         name: check changes javascript
         with:
+          base: main
           filters: |
             src:
-              - '**-js-**'
+              - '**-js-**/'
       - uses: dorny/paths-filter@v3
         id: changes_python
         name: check changes python
         with:
+          base: main
           filters: |
             src:
-              - '**-python-**'
+              - '**-python-**/'
 
   test:
     name: ${{matrix.project}}-${{matrix.os}}
