--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
           base: main
           filters: |
             src:
-              - '**-rust-**/'
+              - '**-rust-**/**'
       - uses: dorny/paths-filter@v3
         id: changes_dotnet
         name: check changes dotnet
@@ -40,7 +40,7 @@ jobs:
           base: main
           filters: |
             src:
-              - '**-dotnet-**/'
+              - '**-dotnet-**/**'
       - uses: dorny/paths-filter@v3
         id: changes_go
         name: check changes go
@@ -48,7 +48,7 @@ jobs:
           base: main
           filters: |
             src:
-              - '**-go-**/'
+              - '**-go-**/**'
       - uses: dorny/paths-filter@v3
         id: changes_java
         name: check changes java
@@ -56,7 +56,7 @@ jobs:
           base: main
           filters: |
             src:
-              - '**-java-**/'
+              - '**-java-**/**'
       - uses: dorny/paths-filter@v3
         id: changes_js
         name: check changes javascript
@@ -64,7 +64,7 @@ jobs:
           base: main
           filters: |
             src:
-              - '**-js-**/'
+              - '**-js-**/**'
       - uses: dorny/paths-filter@v3
         id: changes_python
         name: check changes python
@@ -76,6 +76,7 @@ jobs:
 
   test:
     name: ${{matrix.project}}-${{matrix.os}}
+    if: ${{ needs.changes.outputs.rust == 'true' || needs.changes.outputs.dotnet == 'true' || needs.changes.outputs.go == 'true' || needs.changes.outputs.java == 'true' || needs.changes.outputs.js == 'true' || needs.changes.outputs.python == 'true' }}
     needs: changes
     strategy:
       matrix:
