--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,72 +17,32 @@ jobs:
   changes:
     runs-on: ubuntu-latest
     outputs:
-      rust: ${{ steps.changes_rust.outputs.src }}
-      dotnet: ${{ steps.changes_dotnet.outputs.src }}
-      go: ${{ steps.changes_go.outputs.src }}
-      java: ${{ steps.changes_java.outputs.src }}
-      js: ${{ steps.changes_js.outputs.src }}
-      python: ${{ steps.changes_python.outputs.src }}
+      projects: ${{ steps.filter.outputs.changes }}
     steps:
       - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3
-        id: changes_rust
+        id: changes
         name: check changes rust
         with:
           base: main
           ref: ${{ github.sha }}
           filters: |
-            src:
+            rust:
               - '**-rust-**/**'
-      - uses: dorny/paths-filter@v3
-        id: changes_dotnet
-        name: check changes dotnet
-        with:
-          base: main
-          ref: ${{ github.sha }}
-          filters: |
-            src:
+            dotnet:
               - '**-dotnet-**/**'
-      - uses: dorny/paths-filter@v3
-        id: changes_go
-        name: check changes go
-        with:
-          base: main
-          ref: ${{ github.sha }}
-          filters: |
-            src:
+            go:
               - '**-go-**/**'
-      - uses: dorny/paths-filter@v3
-        id: changes_java
-        name: check changes java
-        with:
-          base: main
-          ref: ${{ github.sha }}
-          filters: |
-            src:
+            java:
               - '**-java-**/**'
-      - uses: dorny/paths-filter@v3
-        id: changes_js
-        name: check changes javascript
-        with:
-          base: main
-          ref: ${{ github.sha }}
-          filters: |
-            src:
+            js:
               - '**-js-**/**'
-      - uses: dorny/paths-filter@v3
-        id: changes_python
-        name: check changes python
-        with:
-          base: main
-          ref: ${{ github.sha }}
-          filters: |
-            src:
+            python:
               - '**-python-**/**'
 
   test:
     name: ${{matrix.project}}-${{matrix.os}}
-    if: ${{ needs.changes.outputs.rust == 'true' || needs.changes.outputs.dotnet == 'true' || needs.changes.outputs.go == 'true' || needs.changes.outputs.java == 'true' || needs.changes.outputs.js == 'true' || needs.changes.outputs.python == 'true' }}
+    # if: ${{ matrix.project == 'rust' || matrix.project == 'dotnet' || matrix.project == 'go' || matrix.project == 'java' || matrix.project == 'js' || matrix.project == 'python' }}
     needs: changes
     strategy:
       matrix:
@@ -91,19 +51,20 @@ jobs:
           - windows-latest
           - macos-13
           - macos-14
-        include:
-          - project: rust
-            if: ${{ needs.changes.outputs.rust == 'true' }}
-          - project: dotnet
-            if: ${{ needs.changes.outputs.dotnet == 'true' }}
-          - project: go
-            if: ${{ needs.changes.outputs.go == 'true' }}
-          - project: java
-            if: ${{ needs.changes.outputs.java == 'true' }}
-          - project: js
-            if: ${{ needs.changes.outputs.js == 'true' }}
-          - project: python
-            if: ${{ needs.changes.outputs.python == 'true' }}
+        project: ${{ fromJSON(needs.changes.outputs.projects) }}
+        # include:
+        #   - project: rust
+        #     if: ${{ needs.changes.outputs.rust == 'true' }}
+        #   - project: dotnet
+        #     if: ${{ needs.changes.outputs.dotnet == 'true' }}
+        #   - project: go
+        #     if: ${{ needs.changes.outputs.go == 'true' }}
+        #   - project: java
+        #     if: ${{ needs.changes.outputs.java == 'true' }}
+        #   - project: js
+        #     if: ${{ needs.changes.outputs.js == 'true' }}
+        #   - project: python
+        #     if: ${{ needs.changes.outputs.python == 'true' }}
       fail-fast: false
     runs-on: ${{ matrix.os }}
     defaults:
