--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
 
   test:
     name: ${{matrix.project}}-${{matrix.os}}
-    if: ${{ needs.changes.outputs.projects != '' }}
+    if: ${{ needs.changes.outputs.projects != '[]' }}
     # if: ${{ matrix.project == 'rust' || matrix.project == 'dotnet' || matrix.project == 'go' || matrix.project == 'java' || matrix.project == 'js' || matrix.project == 'python' }}
     needs: changes
     strategy:
