--- a/consumer-js-kafka/package.json
+++ b/consumer-js-kafka/package.json
@@ -13,15 +13,15 @@
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
     "cors": "^2.8.5",
-    "express": "^5.0.1",
+    "express": "5.1.0",
     "kafkajs": "^2.2.4",
-    "uuid": "^11.0.0"
+    "uuid": "13.0.0"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "^15.0.0",
-    "dotenv": "^17.0.0",
-    "eslint": "^9.12.0",
-    "jest": "^30.0.0"
+    "@pact-foundation/pact": "16.0.0",
+    "dotenv": "17.2.2",
+    "eslint": "9.36.0",
+    "jest": "30.1.3"
   },
   "license": "ISC"
 }
