--- a/provider-js-kafka/package.json
+++ b/provider-js-kafka/package.json
@@ -8,17 +8,17 @@
     "test": "jest --testTimeout 30000 --testMatch \"**/*.pact.test.js\""
   },
   "dependencies": {
-    "body-parser": "^2.0.1",
+    "body-parser": "2.2.0",
     "cors": "^2.8.5",
-    "express": "^5.0.1",
-    "uuid": "^11.0.0",
+    "express": "5.1.0",
+    "uuid": "11.1.0",
     "kafkajs": "^2.2.4"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "^15.0.0",
-    "dotenv": "^17.0.0",
-    "eslint": "^9.12.0",
-    "jest": "^30.0.0"
+    "@pact-foundation/pact": "16.0.0",
+    "dotenv": "17.2.2",
+    "eslint": "9.36.0",
+    "jest": "30.1.3"
   },
   "license": "ISC"
 }
